--- a/indx.html
+++ b/indx.html
@@ -11,7 +11,7 @@
 <body>
     <div class="shopp">
         <form action="" >
-            <div class="mb-3">
+            <div class="mb-3" id="item1">
                 Iphone 12 ($1200): 
                 <img src="./images/1.jpg" alt="">
                 <i class="fa-solid fa-heart " onclick="toggleHeartColor(this)"></i>
@@ -24,7 +24,7 @@
                 </h5>
                 <button type="button" class="btn btn-danger" id="btn-danger">Delete</button>
             </div>
-            <div class="mb-3">
+            <div class="mb-3" id="item2">
                 Iphone 12 ($900): 
                 <img src="./images/a1.jpg" alt="">
                 <i class="fa-solid fa-heart " onclick="toggleHeartColor(this)"></i>
